--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>delicate-quite-4701</name>
+	<name>proyecto-tesis-2023</name>
 	<comment></comment>
 	<projects>
 	</projects>
