--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>masai.com</groupId>
-	<artifactId>delicate-quite-4701</artifactId>
+	<artifactId>proyecto-tesis-2023</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>delicate-quite-4701</name>
+	<name>proyecto-tesis-2023</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
