--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.7.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>masai.com</groupId>
+	<groupId>svf.com</groupId>
 	<artifactId>proyecto-tesis-2023</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>proyecto-tesis-2023</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Spring Boot SVF Project</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
